# aisampler

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
aisampler/: __init__.py
aisampler/discriminators/: __init__.py  simple_discriminator.py  utils.py
aisampler/kernels/: HenonFlow.py  __init__.py  utils.py
aisampler/logistic_regression/: __init__.py  australian.py  densities.py  german.py  heart.py  logistic_regression.py  statistics.py  utils.py
aisampler/sampling/: __init__.py  hamiltonian_monte_carlo.py  metrics.py  metropolis_hastings_with_momentum.py  metropolis_hastings_with_momentum_.py  metropolis_hastings_with_momentum_fn.py  utils.py
aisampler/toy_densities/: __init__.py  gaussian.py  mog2.py  mog6.py  ring.py  ring5.py  utils.py
aisampler/trainer/: __init__.py  adversarial_trainer.py  utils.py
aisampler/trainers/: __init__.py  adversarial_trainer.py  utils.py
experiments/config/: aisampler_toy_density.py  config.py  config_sample_aisampler_logistic_regression.py  config_sample_aisampler_toy_density.py  config_sample_hmc_logistic_regression.py  config_sample_hmc_toy_density.py  config_train_aisampler_toy_density.py  config_train_logistic_regression.py  config_train_toy_density.py  hmc_logistic_regression.py  hmc_toy_density.py  sample_with_aisampler_from_logistic_regression.py  sample_with_aisampler_from_toy_density.py  sample_with_hmc_from_logistic_regression.py  train_aisampler_on_logistic_regression.py  train_aisampler_on_toy_density.py  train_logistic_regression.py
experiments/test/: aisampler_logistic_regression.py  aisampler_toy_densities.py  aisampler_toy_density.py  hmc_logistic_regression.py  hmc_toy_densities.py  hmc_toy_density.py  sample_aisampler_logistic_regression.py  sample_aisampler_toy_density.py  sample_hmc_logistic_regression.py  sample_hmc_toy_density.py
experiments/train/: train_logistic_regression.py  train_toy_density.py
experiments/training/: train_logistic_regression.py  train_toy_densities.py  train_toy_density.py
