[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisampler"
version = "0.0.1"
description = "Ai-sampler: adversarial learning of Markov chains"
authors = [{name = "Riccardo Valperga", email = "r.valperga@uva.nl"}]
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.13",
    "jaxlib>=0.4.23",
    "optax>=0.1.5",
    "flax>=0.7.0",
    "torch>=2.0",
    "numpy>=1.19.5",
    "absl-py>=0.12.0",
    "tqdm>=4.66.4",
    "matplotlib>=3.9.0",
    "ml_collections>=0.1.1",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aisampler*"]

[tool.setuptools.dynamic]
version = {attr = "aisampler.VERSION"}

[project.urls]
homepage = "https://github.com/Ricvalp/aisampler"
documentation = "https://github.com/Ricvalp/aisampler"
source = "https://github.com/Ricvalp/aisampler"
bug-reports = "https://github.com/Ricvalp/aisampler"
