[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisampler"
version = "1.0.0"
description = "Ai-sampler: adversarial learning of Markov chains"
authors = [{name = "Riccardo Valperga", email = "r.valperga@uva.nl"}]
license = {text = "MIT License"}
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["aisampler*"]

[project.urls]
homepage = "https://github.com/Ricvalp/aisampler"
documentation = "https://github.com/Ricvalp/aisampler"
source = "https://github.com/Ricvalp/aisampler"
bug-reports = "https://github.com/Ricvalp/aisampler"
